--- a/ExploreStates.html
+++ b/ExploreStates.html
@@ -220,8 +220,8 @@
       { name: "Maharashtra",state: "Maharashtra",city: "", info: "A land of Maratha valor, vibrant culture, and natural beauty.", link: "Maharashtra.html" },
       { name: "Rajasthan",state: "Rajasthan", city: "", info: "Colors, camels, and timeless charm.", link: "Rajasthan.html" },
       { name: "Goa",state: "Goa", city: "", info: "Sandy toes, salty air, Goan vibes everywhere.", link: "Goa.html" },
-      { name: "Uttarakhand",state: "Uttarakhand", city: "", info: "A towering symbol of Indo-Islamic heritage, this 12th-century minaret stands as a remarkable testament to Delhi’s medieval glory.", link: "qutubminar.html" },
-      { name: "Punjab",state: "Punjab", city: "", info: "An architectural marvel of red sandstone, the Red Fort served as the grand residence of Mughal emperors and remains a powerful emblem of India's sovereignty.", link: "redfort.html" },
+      { name: "Uttarakhand",state: "Uttarakhand", city: "", info: "Land of Gods, tranquil lakes, and mighty mountains.", link: "Uttarakhand.html" },
+      { name: "Punjab",state: "Punjab", city: "", info: "Fields of gold, Bhangra beats, and divine devotion.", link: "redfort.html" },
       { name: "Delhi",state: "Delhi", city: "", info: "A spectacular complex of rock-cut temples and monasteries, Ellora showcases the harmonious coexistence of Hindu, Buddhist, and Jain heritage in ancient India.", link: "ellora.html" },
       { name: "Gujrat",state: "Gujrat", city: "", info: "Renowned for their exquisite ancient murals and Buddhist rock-cut architecture, the Ajanta Caves reflect the spiritual and artistic brilliance of ancient India.", link: "ajanta.html" }
     ];
