--- a/ExploreStates.html
+++ b/ExploreStates.html
@@ -221,9 +221,9 @@
       { name: "Rajasthan",state: "Rajasthan", city: "", info: "Colors, camels, and timeless charm.", link: "Rajasthan.html" },
       { name: "Goa",state: "Goa", city: "", info: "Sandy toes, salty air, Goan vibes everywhere.", link: "Goa.html" },
       { name: "Uttarakhand",state: "Uttarakhand", city: "", info: "Land of Gods, tranquil lakes, and mighty mountains.", link: "Uttarakhand.html" },
-      { name: "Punjab",state: "Punjab", city: "", info: "Fields of gold, Bhangra beats, and divine devotion.", link: "redfort.html" },
-      { name: "Delhi",state: "Delhi", city: "", info: "A spectacular complex of rock-cut temples and monasteries, Ellora showcases the harmonious coexistence of Hindu, Buddhist, and Jain heritage in ancient India.", link: "ellora.html" },
-      { name: "Gujrat",state: "Gujrat", city: "", info: "Renowned for their exquisite ancient murals and Buddhist rock-cut architecture, the Ajanta Caves reflect the spiritual and artistic brilliance of ancient India.", link: "ajanta.html" }
+      { name: "Punjab",state: "Punjab", city: "", info: "Fields of gold, Bhangra beats, and divine devotion.", link: "Punjab.html" },
+      { name: "Delhi",state: "Delhi", city: "", info: "The soul of India beats strongest here", link: "Delhi.html" },
+      { name: "Gujrat",state: "Gujrat", city: "", info: "A land of rich culture and entrepreneurial spirit.", link: "Gujrat.html" }
     ];
 
     function displayCards(filter = "") {
